tests/More/Good/17.tig
/* arrays */
let 
	type a = array of int

	var arr1:a := a [10] of 0
in
	arr1[2] := 100
end