tests/More/Bad/18.tig
/* error: Tiger does not use structural equivalence for arrays */
let
	type a = array of int
	type b = array of int
	var x:= a [5] of 0
	var y:= b [5] of 0
in
	x:=y
end


